--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,34 +1,38 @@
 [build-system]
-requires = ["setuptools>=45", "wheel", "setuptools_scm"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "retail"
 version = "0.1.0"
-description = "Synvya Retail Commerce application supporting plugins for Square and Shopify."
+description = "Retail API for Square integration"
 authors = [
     {name = "Alejandro", email = "alejandro@synvya.com"}
 ]
 readme = "README.md"
 license = {text = "MIT"}
 dependencies = [
-    "fastapi>=0.110.0",
-    "uvicorn[standard]>=0.28.1",
-    "sqlalchemy>=2.0.29",
-    "psycopg2-binary>=2.9.9",
-    "python-dotenv>=1.0.1",
-    "requests>=2.31.0",
-    "squareup>=20.1.0",
-    "synvya_sdk>=0.2.0"
+    "fastapi>=0.109.0",
+    "uvicorn>=0.27.0",
+    "sqlalchemy>=2.0.0",
+    "pydantic>=2.0.0",
+    "pydantic-settings>=2.0.0",
+    "python-dotenv>=1.0.0",
+    "squareup>=35.0.0",
+    "synvya-sdk>=0.1.0",
+    "python-jose[cryptography]",
+    "types-python-jose",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=8.1.1",
-    "mypy>=1.11.1",
-    "pylint>=3.1.0",
-    "black>=23.3.0",
-    "isort>=5.10.1"
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
+    "pytest-cov>=4.1.0",
+    "black>=24.0.0",
+    "isort>=5.13.0",
+    "mypy>=1.8.0",
+    "alembic>=1.15.0",
 ]
 
 [tool.setuptools]
@@ -41,12 +45,28 @@ version_scheme = "guess-next-dev"
 local_scheme = "node-and-date" 
 
 [tool.mypy]
-plugins = ["sqlalchemy.ext.mypy.plugin"]
+python_version = "3.12"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+
+[[tool.mypy.overrides]]
+module = ["square.*", "synvya_sdk.*"]
+ignore_missing_imports = true
 
 [tool.black]
-line-length = 88
-target-version = ['py39']
-include = '\.pyi?$'
+line-length = 100
+target-version = ["py312"]
 
 [tool.isort]
 profile = "black"
+line_length = 100
+multi_line_output = 3
