--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dev = [
 
 [tool.setuptools]
 package-dir = {"" = "src"}
-packages = ["retail"]
+packages = ["retail_backend"]
 exclude-package-data = {"*" = ["tests/*", "tests/**/*"]}
 
 [tool.setuptools_scm]
