--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,10 +53,12 @@ disallow_incomplete_defs = true
 check_untyped_defs = true
 disallow_untyped_decorators = true
 no_implicit_optional = true
+strict_optional = true
 warn_redundant_casts = true
 warn_unused_ignores = true
 warn_no_return = true
 warn_unreachable = true
+exclude = "src/.*\\.pyi$"
 
 [[tool.mypy.overrides]]
 module = ["square.*", "synvya_sdk.*"]
